--- a/css/vegoutstyle.css
+++ b/css/vegoutstyle.css
@@ -328,7 +328,7 @@ margin-top: 5em;
   margin-right:5em; */
   margin-bottom:3em;
 /* position: relative; */
-  max-width: 82%;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
