--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,3 +1,26 @@
+.introduction{
+    height:80vh;
+    width: 100%;
+
+    background: url('../images/header.jpg') no-repeat center center;
+    /* background: url(../images/landingpage.png) no-repeat center center fixed; */
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: relative;
+}
+
+.middle {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
 /* start navigation */
 .custom-navbar {
     background-color: #fff;
@@ -143,7 +166,7 @@ p{
 }
 
 h1{
-font-size: 30px;
+font-size: 45px;
 
 /* font-family: 'Do Hyeon', sans-serif; */
 /* font-family: 'Playfair Display', serif; */
@@ -151,7 +174,7 @@ font-size: 30px;
 font-family: 'Karla', sans-serif;
 /* font-family: 'Poppins', serif; */
 font-style: normal;
-font-weight: bold;
+font-weight: 900;
 color: #2E3542;
 line-height: 30px;
 letter-spacing: -.03em;
