--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -64,7 +64,7 @@ font-family: 'Montserrat', sans-serif;
 }
 .custom-navbar .nav li a:hover {
     /* background: #FF8C5F; */
-    color: #303030;
+    color: #F15C48;
     transition: all 0.3s ease-in-out;
 }
 
