--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,24 +1,3 @@
-#introduction{
-    height:70vh;
-    width: 100%;
-
-    /* background: url('../images/header.jpg') no-repeat center center; */
-    /* background: url(../images/landingpage.png) no-repeat center center fixed; */
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: relative;
-}
-
-
-#introduction {
-
-/* max-width: 1000px; */
-margin: 0 auto;
-
-}
 
 
 
@@ -110,18 +89,16 @@ color: #2E3542;
 
 
 
-
+/*
 #aboutphotos {
 padding-top: 50px;
 position: relative;
 max-width: 1000px;
 margin: 0 auto;
 
-}
+} */
 
-#aboutphotos img{
-  padding:.2em;
-}
+
 
 #about {
 padding-top: 3em;
@@ -207,6 +184,7 @@ font-style: normal;
 color: #2E3542;
 line-height:1.3em;
 padding-top: 10%;
+padding-bottom: 20%;
 /* letter-spacing: -.01em; */
 }
 
