--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -89,31 +89,17 @@ color: #2E3542;
 
 
 
-/*
+
 #aboutphotos {
 padding-top: 50px;
 position: relative;
 max-width: 1000px;
 margin: 0 auto;
 
-} */
-
-
-
-#about {
-padding-top: 3em;
-position: relative;
-max-width: 850px;
-margin: 0 auto;
-
 }
-#about2 {
-padding-top: 0em;
-position: relative;
-max-width: 850px;
-margin: 0 auto;
 
-}
+
+
 
 h2{
   font-family: 'Montserrat', sans-serif;
@@ -188,12 +174,21 @@ padding-bottom: 20%;
 /* letter-spacing: -.01em; */
 }
 
+.aboutphotos {
+  padding-top: 3em;
+    padding-bottom: 5em;
+  max-width: 1150px;
+  align-items: center;
+
+}
+
+
 
 h3{
   font-family: 'Montserrat', sans-serif;
-  font-size: 28px;
+  font-size: 27px;
   font-style: normal;
-  font-weight: 800;
+  font-weight: 700;
   color: #2E3542;
   letter-spacing: .0em;
   }
@@ -211,35 +206,6 @@ h4{
 hr{
   border: .5px solid #7A7A7A;
 }
-
-.custom-end{
-  color: #6b6b6f;
-  text-align: right;
-  margin-top: 50px;
-}
-
-
-.contact-links {
-  margin-right: 50px;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
-  color: #F4695E;
-  text-decoration: none;
-  display:inline-block;
-  font-family: 'Muli', sans-serif;
-  font-style: normal;
-  font-weight:bold;
-  font-size: 16px;
-  letter-spacing: .01em;
-  text-rendering: optimizeLegibility;
-}
-
-
-
-
-
 
 
 /* responsiveness */
