--- a/css/project.css
+++ b/css/project.css
@@ -10,7 +10,7 @@
 
 .navbar-brand, .navbar-brand:hover  {
   color: 	#C0C0C0;
-font-family: 'Montserrat', sans-serif;
+font-family: 'Raleway', sans-serif;
 		font-style: normal;
 		font-size: 16px;
     letter-spacing: .01em;
@@ -26,7 +26,7 @@ font-family: 'Montserrat', sans-serif;
 
 .custom-navbar .nav li a {
 		color: 	#C0C0C0;
-font-family: 'Montserrat', sans-serif;
+font-family: 'Raleway', sans-serif;
 		/* font-weight: 500; */
 		font-style: normal;
 		font-size: 16px;
